# scvm

./: README.md  install.sh  pyproject.toml
.ipynb_checkpoints/: __init__-checkpoint.py  assign_sex-checkpoint.py  cellcycle_corr-checkpoint.py  globimport-checkpoint.py  gsea-checkpoint.py  map_to_dahlin-checkpoint.py  perma_plot-checkpoint.py  tryumap-checkpoint.py  umap_grid-checkpoint.py
minions/: README.md  describe.py  is_outlier.py
minions/pl/: perma_plot.py
minions/pp/: .clean_cellranger_summary.py.swp  clean_cellranger_summary.py
minions/tl/: rankobs.py  scvi.py
minions/tl/.ipynb_checkpoints/: gsea-checkpoint.py
scvm/: README.md  is_outlier.py
scvm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scvm/data/: __init__.py
scvm/pl/: __init__.py  histplot.py  pca_correlation.py  ridgeplot.py
scvm/pl/.ipynb_checkpoints/: perma_plot-checkpoint.py  splitplot-checkpoint.py
scvm/tl/: __init__.py  gsea.py  map_to_dahlin.py
scvm/tl/.ipynb_checkpoints/: rankobs-checkpoint.py
